<resources>
    <string name="app_name">Boyatrip</string>
    <string name="IglesiaTrinidad">Iglesia de la trinidad</string>
    <string name="IconLocalization">Duitama</string>
    <string name="Calification">Calificación</string>
    <string name="ValueCalification">4.0</string>
    <string name="title_description">Descripción</string>
    <string name="text_description">Fue construida en 1.870 por orden del Marqués de Surba y Bonza, con un estilo colonial. Es la más antigua del municipio. La parroquia La Trinidad de Duitama, fue constituida el 1 de Enero de 1.971 según decreto N° 01/71 por el Excelentísimo Señor Obispo Julio Franco Arango. Su primer párroco fue el Reverendo Padre: Luis Levi Leguizamón López.</string>
    <string name="title_localization">Localización</string>
    <string name="registro">Registro de un lugar</string>
    <string name="registrar">registrar</string>
    <string name="estatura">Estatura</string>
    <string name="info">"Nombre: %s, Estatura: %f"</string>
    <string name="catedral">Catedral de Duitama</string>
    <string name="Puntuacion">Puntuacion: 4.0</string>
    <string name="DespricionPO1">Descripcion breve del sitio turistico en cuestion y de como llegar a el</string>
</resources>